[metadata]
name = market-gpt
version = attr: market_gpt.__version__
url = https://github.com/NeroCube/market-gpt
author = Nero Chen
author_email = nerocube.tw@gmail.com
description = Get market sentiment score with the assistance of OpenAI GPT-3.
long_description = file: README.md
keywords = gpt, market
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
packages = find:
zip_safe = false
install_requires =
  openai >= 0.26.1

[options.package_data]
* = *.txt, *.md, LICENSE

[options.entry_points]
console_scripts =
    market-gpt = market_gpt.__main__:main