[metadata]
name = market-gpt
version = attr: market_gpt.__version__
author = Nero Chen
author_email = nerocube.tw@gmail.com
description = Get market sentiment score with the assistance of OpenAI GPT-3.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NeroCube/market-gpt
project_urls =
    Bug Tracker = https://github.com/NeroCube/market-gpt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7.1
zip_safe = True
include_package_data = True
install_requires =
  openai >= 0.26.1

[options.entry_points]
console_scripts =
    market-gpt = market_gpt.__main__:main